# author_swap_backend

./: .gitignore  cancel_stripe_sub.py  clear_balance.py  clear_stripe_subs.py  create_test_user.py  debug_login.py  debug_user_138.py  fix_pen_name.py  frontend_notification_websockets.md  get_users.py  list_customers.py  mailerlite_integration_guide.md  manage.py  min_test.py  out.txt  pyproject.toml  requirements.txt  reset_subs.py  seed_analytics.py  seed_subscription_tiers.py  seed_tiers.py  swap_process_flow.md  test_add_book.py  test_api.py  test_broken_link.py  test_db.py  test_detail.py  test_detail_post.py  test_edit_slot.py  test_explorer.py  test_export_api.py  test_login.py  test_new_api.py  test_onboarding_status.py  test_profile.py  test_request.py  test_smtp.py  test_subscription_api.py  test_verification.py  test_ws.py
authentication/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
author_swap/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  calendar_views.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  ui_serializers.py  ui_views.py  urls.py  views.py
core/management/commands/: check_missed_swaps.py  seed_slots.py  send_notification.py
core/services/: mailerlite_service.py  reputation_service.py
