[tool.poetry]
name = "authorswap-backend"
version = "0.1.0"
description = ""
authors = ["Shivam <srivastva2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.2"
djangorestframework = "^3.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
